fix text overflow on small screens

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -168,6 +168,13 @@ html {
 	#navbar {
 		display: block;
 	}
+
+	.cut-text {
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
+		width: 100%;
+	}
 	
    .nav-item .nav-link {
        text-align: center;
